tripGo/src/main/java/com/example/tripGo/error/InvalidOperationException.java
package com.example.tripGo.error;

public class InvalidOperationException extends RuntimeException {
    public InvalidOperationException(String message) {
        super(message);
    }
}
